--- a/style.css
+++ b/style.css
@@ -118,10 +118,10 @@ label {
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
-    .parametro-coluna__senha {
-        flex-direction: row;
-    }
+.barra {
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
 }
 
 .forca {
